[gd_scene load_steps=4 format=3 uid="uid://b72iubmw5fb6r"]

[ext_resource type="Script" path="res://golf_hole_GDS.gd" id="1_4rskb"]
[ext_resource type="Texture2D" uid="uid://gfea3swg527s" path="res://BadGolfTexture.png" id="1_toxid"]
[ext_resource type="PackedScene" uid="uid://dvekf1vhnogj1" path="res://golf_hole_flag.tscn" id="2_bwgy0"]

[node name="GolfHole" type="Area2D"]
z_as_relative = false
y_sort_enabled = true
script = ExtResource("1_4rskb")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_as_relative = false
y_sort_enabled = true
position = Vector2(0, 2)
texture = ExtResource("1_toxid")
offset = Vector2(0, -2)
region_enabled = true
region_rect = Rect2(10, 2, 12, 4)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-2, 1, -4, 0, -2, -1, 2, -1, 4, 0, 2, 1)

[node name="GolfHoleFlag" parent="." instance=ExtResource("2_bwgy0")]
position = Vector2(3, 2)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="in_hole" from="." to="." method="_on_in_hole"]
[connection signal="in_hole" from="." to="GolfHoleFlag" method="_on_golf_hole_in_hole"]
